# bms-store

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/bms-core/: Cargo.toml
crates/bms-core/src/: alarm.rs  event.rs  lib.rs  node.rs  plugin.rs  protocol.rs  rbac.rs  types.rs
crates/bms-haystack/: Cargo.toml  README.md  build.rs
crates/bms-haystack/src/: auto_tag.rs  lib.rs
crates/bms-haystack/src/codec/: mod.rs
crates/bms-haystack/src/codec/hayson/: decode.rs  encode.rs  mod.rs  tests.rs
crates/bms-haystack/src/filter/: ast.rs  eval.rs  mod.rs  parser.rs  sql.rs  tests.rs
crates/bms-haystack/src/ontology/: codegen.rs  mod.rs  proto.rs
crates/bms-haystack/src/server/: content.rs  mod.rs  state.rs  watch.rs
crates/bms-haystack/src/server/handlers/: about.rs  common.rs  defs.rs  filetypes.rs  his_read.rs  his_write.rs  invoke_action.rs  libs.rs  mod.rs  nav.rs  ops.rs  point_write.rs  read.rs  watch_poll.rs  watch_sub.rs  watch_unsub.rs
crates/bms-haystack/src/val/: coord.rs  datetime.rs  dict.rs  grid.rs  mod.rs  number.rs  ref_.rs  value.rs
crates/bms-haystack/src/validation/: mod.rs
crates/bms-haystack/src/xeto/: loader.rs  mod.rs  parser.rs  version.rs
crates/bms-haystack/tests/: http_smoke.rs  parity.rs
crates/bms-store-alarms/: Cargo.toml
crates/bms-store-alarms/src/: engine.rs  event.rs  lib.rs  rule.rs  sink.rs  state.rs
crates/bms-store-bridges/: Cargo.toml
crates/bms-store-bridges/src/: boot.rs  lib.rs
crates/bms-store-bridges/src/bridge/: backoff.rs  modbus.rs  traits.rs
crates/bms-store-bridges/src/bridge/bacnet/: config.rs  conversion.rs  data_services.rs  discovery.rs  loop_cov_poll.rs  loop_event_poll.rs  loop_monitor.rs  loop_time_sync.rs  loop_trend_sync.rs  mod.rs  networks.rs  operations.rs  server.rs  source.rs  tests.rs  transport.rs
crates/bms-store-bridges/src/discovery/: bacnet_adapter.rs  duplicates.rs  grouping.rs  mod.rs  modbus_adapter.rs  model.rs  naming.rs  service.rs  tests.rs  units.rs
crates/bms-store-bridges/src/haystack/: auto_tag.rs  mod.rs  tags.rs  validation.rs
crates/bms-store-bridges/src/normalize/: mod.rs  value_map.rs
crates/bms-store-bridges/src/plugin/: archive.rs  mod.rs
crates/bms-store-client/: Cargo.toml
crates/bms-store-client/src/: lib.rs
crates/bms-store-gui/: BOOT_REPORT_TASK13.md  Cargo.toml  Dioxus.toml  PR_SUMMARY.md  README.md
crates/bms-store-gui/assets/: manifest.json  style.css  sw.js
crates/bms-store-gui/src/: lib.rs  main.rs
crates/bms-store-gui/src/extracted/: platform.rs
crates/bms-store-gui/src/gui/: api_client.rs  app.rs  mod.rs  site_context.rs  state.rs  supervisor_state.rs  supervisor_validation.rs  theme.rs
crates/bms-store-gui/src/gui/aggregation/: alarm_aggregator.rs  energy_aggregator.rs  mod.rs  types.rs
crates/bms-store-gui/src/gui/components/: alarm_routing_view.rs  alarm_view.rs  api_keys_view.rs  atlas_settings.rs  audit_log_view.rs  auto_tag_preview.rs  backup_view.rs  bacnet_device_alarms.rs  bacnet_device_cov.rs  bacnet_device_files.rs  bacnet_device_trends.rs  bacnet_network_tools.rs  bridge_settings.rs  building_tree.rs  cloud_settings.rs  commissioning_overview.rs  commissioning_tab.rs  config_view.rs  coverage_view.rs  cross_site_alarm_view.rs  device_tree.rs  discovery_bacnet_ops.rs  discovery_detail.rs  discovery_group_editor.rs  discovery_list.rs  discovery_utils.rs  discovery_view.rs  mod.rs  (+37 more)
crates/bms-store-gui/src/gui_raw/: app.rs  site_context.rs  supervisor_validation.rs  theme.rs
crates/bms-store-gui/tests/: smoke.rs
crates/bms-store-server/: Cargo.toml
crates/bms-store-server/assets/: sw.js
crates/bms-store-server/src/: lib.rs
crates/bms-store-server/src/api/: api_keys.rs  auth.rs  error.rs  haystack_state.rs  mod.rs  openapi.rs  pagination.rs  write.rs  ws.rs
crates/bms-store-storage/: Cargo.toml  entity_provenance  entity_provenance_cascade  entity_provenance_overwrite
crates/bms-store-storage/profiles/modbus-library/: abb-acs580.json  generic-power-meter.json
crates/bms-store-storage/src/: api_key_store.rs  auth.rs  backup.rs  boot.rs  health.rs  lib.rs
crates/bms-store-storage/src/atlas/: db.rs  matcher.rs  mod.rs  model.rs  sync.rs  tests.rs
crates/bms-store-storage/src/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs  publisher.rs
crates/bms-store-storage/src/config/: loader.rs  profile.rs  scenario.rs  template.rs
crates/bms-store-storage/src/discovery/: model.rs
crates/bms-store-storage/src/energy/: consumption.rs  cost.rs  degree_days.rs  demand.rs  mod.rs  rollup.rs  scheduler.rs
crates/bms-store-storage/src/event/: bus.rs  durable_sub.rs  journal.rs  mod.rs
crates/bms-store-storage/src/export/: backfill.rs  influxdb.rs  mod.rs  postgres.rs  publisher.rs
crates/bms-store-storage/src/fdd/: engine.rs  mod.rs  model.rs  resolver.rs  rules.rs
crates/bms-store-storage/src/haystack/: filter.rs  mod.rs
crates/bms-store-storage/src/logic/: compiler.rs  engine.rs  mod.rs  model.rs  store.rs  templates.rs
crates/bms-store-storage/src/mqtt/: client.rs  mod.rs  publisher.rs  topic.rs
crates/bms-store-storage/src/node/: mod.rs
crates/bms-store-storage/src/notification/: channel.rs  email.rs  mod.rs  router.rs  sms.rs  webhook.rs
crates/bms-store-storage/src/project/: mod.rs
crates/bms-store-storage/src/protocol/: mod.rs  normalize.rs
crates/bms-store-storage/src/quality/: mod.rs  stale_detector.rs
crates/bms-store-storage/src/reporting/: engine.rs  mod.rs  renderer.rs  scheduler.rs  templates.rs
crates/bms-store-storage/src/store/: alarm_store.rs  audit_store.rs  bridge_store.rs  cloud_store.rs  commissioning_store.rs  discovery_store.rs  energy_store.rs  entity_store.rs  export_store.rs  fdd_store.rs  history_store.rs  migration.rs  mod.rs  mqtt_store.rs  naming_rule_store.rs  node_store.rs  notification_store.rs  override_store.rs  point_store.rs  relationships.rs  report_store.rs  user_store.rs  webhook_store.rs
crates/bms-store-storage/src/weather/: config.rs  mod.rs  model.rs  service.rs
crates/bms-store-storage/src/webhook/: dispatcher.rs  mod.rs  model.rs  providers.rs
(+75 files in other folders)
