[package]
name = "bms-core"
version = "0.1.0"
edition = "2021"
description = "Core BMS domain types, event bus, protocol traits, and RBAC enums"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
thiserror = "2"
