[package]
name = "bms-store-alarms"
version = "0.1.0"
edition = "2021"
description = "Threshold-based alarm engine for bms-store. Sibling crate; consumes the bms-store event stream and writes alarm entities back through the public API."
license = "MIT OR Apache-2.0"

[dependencies]
bms-core = { path = "../bms-core" }
bms-store-domain = { path = "../bms-store-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1"
utoipa = { version = "5", features = ["preserve_order"] }
