[package]
name = "bms-store-gui"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for the bms-store data layer"
license = "MIT OR Apache-2.0"

[lib]
name = "bms_store_gui"
path = "src/lib.rs"

[[bin]]
name = "bms-store-gui"
path = "src/main.rs"

[dependencies]
# Workspace data layer
bms-core = { path = "../bms-core" }
bms-store-storage = { path = "../bms-store-storage", features = ["atlas"] }
bms-store-bridges = { path = "../bms-store-bridges", features = ["atlas"] }

# UI
dioxus = { version = "0.6", features = ["desktop"] }
rfd = "0.15"

# Async / errors
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
thiserror = "2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto / IDs / encoding (carry-over from opencrate desktop deps)
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Storage / scripting
rusqlite = { version = "0.33", features = ["bundled"] }
rhai = { version = "1", features = ["sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

regex = "1"

# Misc desktop
webbrowser = "1"
urlencoding = "2"
libc = "0.2"

# BACnet / Modbus client crates — used directly by bacnet_device_* and related
# GUI components for fine-grained BACnet operations (COV, file transfer, alarms,
# schedules, network tools). bms-store-bridges wraps its own rustbac usage
# internally without re-exporting the raw types, so the GUI needs them directly.
rustbac-core = "0.4"
rustbac-client = "0.4"

# HTTP client — used by api_client.rs and webhook_settings.rs for outbound calls.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
