[package]
name = "bms-store-storage"
version = "0.1.0"
edition = "2021"
description = "SQLite storage and background services for bms-store"
license = "MIT OR Apache-2.0"

[dependencies]
bms-core = { path = "../bms-core" }
bms-store-domain = { path = "../bms-store-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rusqlite = { version = "0.33", features = ["bundled"] }
rhai = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
tar = "0.4"
tokio-util = "0.7"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
rumqttc = "0.24"
hmac = "0.12"
sha2 = "0.10"
futures = "0.3"
tracing = "0.1"
base64 = "0.22"
urlencoding = "2"
tokio-postgres = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
atlas = []
export-postgres = ["dep:tokio-postgres"]
